feat: transactions && trade history
