# backend/internal/models/user.go
@@ -19,4 +19,5 @@ type UserAccount struct {
 	RegistrationDate string             `json:"registration_date" bson:"registration_date"`
 	WalletAddress    string             `json:"wallet_address" bson:"wallet_address"`
 	TelegramID       string             `json:"telegram_id" bson:"telegram_id"`
+	Password         string             `json:"password" bson:"password"`
 }
